    - Use DH_PYCENTRAL=nomove for now because include-links seems broken
  * Merge lp:~forest-bond/python-apt/cache-is-virtual-package-catch-key-error
    - Return False in Cache.is_virtual_package if the package does not exist.
  * Make all class-level constants have uppercase names.
  * Rewrite apt.progress.gtk2 documentation by hand and drop python-gtk2
    build-time dependency.

  [ Colin Watson ]
  * apt/progress/__init__.py:
    - Fix InstallProgress.updateInterface() to cope with read() returning 0
      on non-blocking file descriptors (LP: #491027).
  
  [ Michael Vogt ]
  * apt/cache.py: 
    - improved docstring for the cache
    - add "enhances" property
  * data/templates/Ubuntu.info.in:
    - add lucid
  * python/cache.cc:
    - add UntranslatedDepType attribute to DependencyType
    - add DepTypeEnum that returns a value from 
      {DepDepends, DepPreDepends, ...}
  * python/apt_pkgmodule.cc:
    - add DepDpkgBreaks, DepEnhances constants
  * doc/source/apt_pkg/{cache.rst, index.rst}:
    - update documentation as well

 -- Julian Andres Klode <jak@debian.org>  Fri, 15 Jan 2010 15:24:16 +0100

python-apt (0.7.92) experimental; urgency=low

  * New features:
    - Provide a C++ API in the package python-apt-dev (Closes: #334923).
    - Add apt_pkg.HashString and apt_pkg.IndexRecords (Closes: #456141).
    - Add apt_pkg.Policy class (Closes: #382725).
    - Add apt_pkg.Hashes class.
    - Allow types providing __new__() to be subclassed.
    - Add apt_pkg.DepCache.mark_auto() and apt.Package.mark_auto() methods to
      mark a package as automatically installed.
    - Make AcquireFile a subclass of AcquireItem, thus inheriting attributes.
    - New progress handling in apt.progress.base and apt.progress.text. Still
      missing Qt4 progress handlers.
    - Classes in apt_inst (Closes: #536096)
      + You can now use apt_inst.DebFile.data to access the data.tar.* member
        regardless of its compression (LP: #44493)
